arm/app/nextcloud/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: app-nextcloud
spec:
  ports:
  - port: 3306
  selector:
    app: mariadb

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: app-nextcloud
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - image: mariadb:10
        name: mariadb
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pvc
