arm/app/nextcloud/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: storage-ingress
  namespace: app-storage
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
  - hosts:
    - storage.gwcloud.tk
    secretName: ingress-secret
  rules:
  - host: storage.gwcloud.tk
    http:
      paths:
      - backend:
          serviceName: storage
          servicePort: 80
